fixed the left alignment of the containers on larger screens

--- a/masterstylesheet.css
+++ b/masterstylesheet.css
@@ -7,7 +7,7 @@ body{
     margin: 0;
 }
 .container{
-    max-width: 1250px;
+    max-width: 1500px;
     width: 100%;
     text-align: center;
 }
@@ -50,7 +50,7 @@ nav{
 }
 .top-images{
     float: left;
-    padding: 5px;
+    padding: 10px;
     margin: 0px;
     height: 450px;
     width:325px;
@@ -58,7 +58,7 @@ nav{
 }
 .bottom-images{
     float: right;
-    padding: 5px;
+    padding: 10px;
     margin: 0;
     height: 450px;
     width:325px;
